--- a/scratch.html
+++ b/scratch.html
@@ -16,6 +16,7 @@
         <h1>
             I love basbeall!
         </h1>
+        <img src="https://spectrumsportsnet.com/content/dam/sports/images/sportsnetla/2024/04/12/betts-hero-412.jpg" class="imgcenter" alt="...">
         <p>
             <ol>
                 <li>The Dodgers Batting Lineup
